    - upstream/lock-impl.patch: drop, merged upstream.
    - upstream/paint-layer-header.patch: drop, merged upstream.
    - disable/unrar.patch: drop, merged upstream w/ build arg.
    - fixes/ps-print.patch: refresh.
    - system/openjpeg.patch: refresh.
    - bookworm/clang16.patch: refresh & remove another unsupported option.
    - bookworm/constexpr.patch: refresh & update for renamed file.
    - fixes/highway-include-path.patch: upstream fixed the original issue
      in a broken way, making this worse. Add more to this patch to work
      around that.

  [ Daniel Richard G. ]
  * d/rules: Parameterize Rust sysroot to simplify using a different one.

 -- Andres Salomon <dilinger@debian.org>  Wed, 14 Aug 2024 13:11:25 -0400

chromium (127.0.6533.119-1) unstable; urgency=high

  [ Andres Salomon ]
  * New upstream stable release.
  * d/patches/upstream/armhf-ftbfs.patch: armhf FTBFS fix from upstream.

  [ Daniel Richard G. ]
  * d/patches:
    - ppc64le/crashpad/0002-Include-cstddef-to-fix-build.patch: Drop, as
      the original FTBFS that this fixed is no longer reproducible.
    - ppc64le/fixes/fix-different-data-layouts.patch: Fix ppc64el FTBFS due
      to minor LLVM data-layout clash between older clang and newer rustc.
  * d/rules: Add to ppc64el CXXFLAGS to quash copious AltiVec warnings.

 -- Andres Salomon <dilinger@debian.org>  Wed, 14 Aug 2024 13:11:25 -0400

chromium (127.0.6533.99-1) unstable; urgency=high

  [ Andres Salomon ]
  * New upstream security release.
    - CVE-2024-7532: Out of bounds memory access in ANGLE.
      Reported by wgslfuzz.
    - CVE-2024-7533: Use after free in Sharing. Reported by
      lime(@limeSec_) from TIANGONG Team of Legendsec at QI-ANXIN Group.
    - CVE-2024-7550: Type Confusion in V8.
      Reported by Zhenghang Xiao (@Kipreyyy).
    - CVE-2024-7534: Heap buffer overflow in Layout.
      Reported by Tashita Software Security.
    - CVE-2024-7535: Inappropriate implementation in V8.